--- a/_config.yml
+++ b/_config.yml
@@ -532,9 +532,9 @@ rating:
 # Show number of visitors to each article.
 # You can visit https://leancloud.cn get AppID and AppKey.
 leancloud_visitors:
-  enable: false
-  app_id: #<app_id>
-  app_key: #<app_key>
+  enable: true
+  app_id: oPQ3dJVj0Ltg62BaVlONulv3-gzGzoHsz
+  app_key: Fo3CGQAkNSqxmtx8WsHuozdX
 
 # Another tool to show number of visitors to each article.
 # visit https://console.firebase.google.com/u/0/ to get apiKey and projectId
