添加站点验证

--- a/_config.yml
+++ b/_config.yml
@@ -463,7 +463,8 @@ needmoreshare2:
 
 # Google Webmaster tools verification setting
 # See: https://www.google.com/webmasters/
-#google_site_verification:
+google_site_verification: E_BuwLWbdFBd3ISvwueFTYYoMYHT-Fl3vefMgpQ1mCQ
+baidu_site_verification: O8eQQQctX2
 
 # Google Analytics
 #google_analytics:
