--- a/_config.yml
+++ b/_config.yml
@@ -464,7 +464,7 @@ needmoreshare2:
 # Google Webmaster tools verification setting
 # See: https://www.google.com/webmasters/
 google_site_verification: E_BuwLWbdFBd3ISvwueFTYYoMYHT-Fl3vefMgpQ1mCQ
-baidu_site_verification: O8eQQQctX2
+baidu_site_verification: VeHsu6302D
 
 # Google Analytics
 #google_analytics:
