--- a/_config.yml
+++ b/_config.yml
@@ -379,9 +379,9 @@ changyan:
 # You can get your appid and appkey from https://leancloud.cn
 # more info please open https://valine.js.org
 valine:
-  enable: false
-  appid:  # your leancloud application appid
-  appkey:  # your leancloud application appkey
+  enable: true
+  appid:  oPQ3dJVj0Ltg62BaVlONulv3-gzGzoHsz
+  appkey:  Fo3CGQAkNSqxmtx8WsHuozdX
   notify: false # mail notifier , https://github.com/xCss/Valine/wiki
   verify: false # Verification code
   placeholder: Just go go # comment box placeholder
